--- a/css/style.css
+++ b/css/style.css
@@ -444,38 +444,38 @@ section.show .tab-close {
 }
 
 .ce .hypothese .bg {
-    background-position: left 75%, left 50%;
-    background-size: 840px, 700px;
+    background-position: left 50%, left 50%;
+    background-size: 100%, 76%;
 }
 
 .mp .hypothese .bg {
-    background-position: left 5%, 18% 15%;
-    background-size: 840px, 450px;
+    background-position: left 5%, left 5%;
+    background-size: 100%, 62%;
 }
 
 .p .hypothese .bg {
-    background-position: left 75%, left 40%;
-    background-size: 840px, 650px;
+    background-position: left 100%, left 40%;
+    background-size: 100%, 71%;
 }
 
 .a .hypothese .bg {
-    background-position: left 35%, left 120%;
-    background-size: 840px, 500px;
+    background-position: left 80%, left 100%;
+    background-size: 100%, 60%;
 }
 
 .cc .hypothese .bg {
-    background-position: left 98%, left 70%;
-    background-size: 840px, 600px;
+    background-position: left 65%, left 70%;
+    background-size: 100%, 68%;
 }
 
 .e .hypothese .bg {
-    background-position: left 35%, left 50%;
-    background-size: 840px, 450px;
+    background-position: left 50%, left 50%;
+    background-size: 100%, 54%;
 }
 
 .fl .hypothese .bg {
-    background-position: left 0%, left 50%;
-    background-size: 840px, 500px;
+    background-position: left 0%, left 0%;
+    background-size: 100%, 61%;
 }
 
 .legende {
