--- a/css/responsive.css
+++ b/css/responsive.css
@@ -254,6 +254,10 @@
         background-position: 50% 0%;
         min-height: 400px;
     }
+
+    article.general-bg {
+        padding-bottom: 80%;
+    }
 }
 
 @media screen and (min-width: 600px) and (max-width: 759px) {
