--- a/css/responsive.css
+++ b/css/responsive.css
@@ -54,8 +54,7 @@
         padding-left: 0px;
         font-size: 50px;
         line-height: 55px;
-        min-width: 391px;
-        max-width: 410px;
+        width: 400px;
         padding-top: 5px;
         padding-bottom: 5px;
     }
